<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD7CD"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="270dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/jomhuria"
        android:text="@string/subbik"
        android:textColor="#3A5A40"


        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="340dp"
        android:layout_height="310dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/green_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/jomhuria"
            android:text="@string/registration"
            android:textColor="#3A5A40"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/user_login_auth"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:fontFamily="@font/lobster"
            android:hint="@string/EU"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#3A5A40"
            android:textColorHint="#903A5A40"
            android:textSize="25sp" />



        <EditText
            android:id="@+id/user_pass_auth"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:fontFamily="@font/lobster"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#3A5A40"
            android:textColorHint="#903A5A40"
            android:textSize="25sp" />


        <Button
            android:id="@+id/button_auth"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="#3A5A40"
            android:fontFamily="@font/lobster"
            android:text="@string/Aut"
            android:textSize="25sp"
            app:cornerRadius="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/jomhuria"
        android:text="@string/CR"
        android:textColor="#3A5A40"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formContainer"
        app:layout_constraintVertical_bias="0.721" />

</androidx.constraintlayout.widget.ConstraintLayout>